Adicao de partes do body  no html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>202276033</title>
 </head>
 <body>
-    
+    <header>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
