Texto no header e no rodapé

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
 </head>
 <body>
     <header>
+        <title>Matheus Carvalho Torres</title>
     </header>
     <main>
+        <section>
+        </section>
     </main>
     <footer>
+        <p>Matheus Carvalho Torres</p>
+        <p>202276033</p>
     </footer>
 </body>
 </html>
