Adicionado os textos da section

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 </head>
 <body>
     <header>
-        <title>Matheus Carvalho Torres</title>
+        <h1>Matheus Carvalho Torres</h1>
     </header>
     <main>
         <section>
+            <h1>História</h1>
+            <p>Nascido em Sapucaia-Rj, meus principais hobbies são jogar video game e assistir séries ruins.</p>
+            <h2>O que te levou a escolher seu curso?</h2>
+            <p>A paixão por programação e o ódio por matemática.</p>
+            <h3>O que deseja trabalhar quando formar?</h3>
+            <p>Desenvolvimento nativo para Android.</p>
         </section>
     </main>
     <footer>
