--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>202276033</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
     </main>
     <footer>
         <p>Matheus Carvalho Torres</p>
-        <p>202276033</p>
+        <p>E-MAIL: matheus.torres@estudante.ufjf.br</p>
     </footer>
 </body>
 </html>
